# nexus02

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  task.md
.github/workflows/: ci.yml
crates/agent/: Cargo.toml
crates/agent/src/: config.rs  custom_tls.rs  discovery.rs  host.rs  lib.rs  main.rs  pairing.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/fs/: Cargo.toml
crates/fs/src/: config.rs  filesystem.rs  grpc_client.rs  main.rs  pairing.rs
crates/migrate/: Cargo.toml
crates/migrate/android/: NexusMigrate.kt
crates/migrate/src/: conflict.rs  lib.rs  schema.rs  snapshot.rs  transport.rs
crates/migrate/src/android/: mod.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: file_service.proto  migrate_service.proto  pair_service.proto  stream_service.proto
crates/proto/src/: lib.rs
crates/stream/: Cargo.toml
crates/stream/src/: capture.rs  decode.rs  display.rs  encode.rs  host.rs  inject.rs  lib.rs  main.rs  viewer.rs
crates/stream/tests/: loopback.rs
docs/adr/: 0001-android-fuse-limitation.md  0002-android-cross-compilation.md  0003-config-dir-override.md  0004-shared-secret-auth-and-tls.md  0005-vector-clock-conflict-detection.md  0006-fuse-read-write-mount.md  0007-read-open-clock-sync.md  0008-delete-vs-edit-conflicts.md  0009-rename-move-support.md  0010-streaming-writes.md  0011-clock-tombstone-gc.md  0012-app-cooperative-migration-sdk.md  0013-device-pairing-protocol.md  0014-screen-streaming-and-remote-control.md  0015-mdns-device-discovery.md  0016-directory-level-conflict-detection.md
