[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/proto",
    "crates/agent",
    "crates/fs",
    "crates/migrate",
    "crates/stream",
]

# Shared dependency versions across the workspace.
# Keeping these pinned in one place means every crate stays in lockstep,
# which matters once cargo-ndk cross-compiles agent for Android —
# version drift between crates is a common source of "works on Linux,
# fails to link on Android" bugs.
[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "sync", "time"] }
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
subtle = "2"
rand = { version = "0.8", features = ["getrandom"] }
ffmpeg-next = "7"
winit = { version = "0.30", default-features = false }
pixels = "0.13"
tokio-stream = { version = "0.1", features = ["net"] }
futures-util = "0.3"
ashpd = "0.13"
pipewire = "0.10"

[profile.dev]
# Lower debug info verbosity to ease RAM pressure during compilation
# on memory-constrained machines (e.g. 4-core/8GB laptops).
debug = 1
incremental = true

[profile.release]
opt-level = "z"   # optimize for binary size — matters more than speed
                   # once this ships to a phone over a slow connection
lto = "thin"
codegen-units = 4
