[package]
name = "nexus-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nexus-agent"
path = "src/main.rs"

[lib]
name = "nexus_agent"
path = "src/lib.rs"

[dependencies]
nexus-common = { path = "../common" }
nexus-proto = { path = "../proto" }
nexus-stream = { path = "../stream" }
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
clap = { version = "4", features = ["derive"] }
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
# Self-signed TLS cert generation. Pinned to the `ring` backend (default for
# 0.13) so we reuse the same crypto provider tonic's TLS already links, and
# avoid pulling aws-lc-rs (which needs cmake + a C build on every machine/CI).
rcgen = { version = "0.13", features = ["x509-parser"] }
# Lightweight PKI types (CertificateDer) shared between rcgen, rustls, tonic.
rustls-pki-types = "1"
# PEM-to-DER parsing for cert fingerprint verification in the mTLS interceptor.
rustls-pemfile = "2"
mdns-sd.workspace = true
rustls = "0.23"
rustls-webpki = "0.103"
tokio-rustls = "0.26"
subtle.workspace = true
rand.workspace = true

[features]
mdns_test = []

[dev-dependencies]
tempfile = "3"
sha2 = "0.10"

# android-specific dependency: lets the agent integrate with Android's
# logging system (logcat) instead of trying to write to stdout, which
# foreground services can't rely on in the same way Linux daemons can.
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
# `log` is used directly in main.rs's android logging init (log::LevelFilter).
# android_logger depends on it transitively, but it must be declared here to
# be nameable from our code on the android target.
log = "0.4"

[target.'cfg(not(target_os = "android"))'.dependencies]
# on real OSes, plain env-filter tracing to stdout/stderr is fine —
# already covered by tracing-subscriber above.
