[package]
name = "nexus-fs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nexus-mount"
path = "src/main.rs"

[dependencies]
nexus-common = { path = "../common" }
nexus-proto = { path = "../proto" }
tokio.workspace = true
tonic.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive", "env"] }
uuid.workspace = true
rcgen = { version = "0.13", features = ["x509-parser"] }
# Bounded inode<->path table (LRU eviction) so a long-running mount over a
# large remote tree can't leak memory indefinitely.
lru = "0.18"
tokio-stream = "0.1"
mdns-sd.workspace = true

# fuser only builds on platforms that actually have a FUSE userspace
# library to link against. This crate should never be compiled for
# aarch64-linux-android — the workspace's Android build targets the
# `agent` crate only, never `fs`. This cfg is a safety net in case
# someone tries anyway.
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
fuser = "0.17"
libc = "0.2"
